# coilgames_bgshop

./: .gitignore  docker-compose.yml  pyproject.toml
app/: .env.template  alembic.ini  main.py
app/actions/: create_superuser.py
app/alembic/: env.py
app/api/dependencies/auth/: access_tokens.py  backend.py  strategy.py  user_manager.py  users.py
app/api/v1/: __init__.py  auth.py  users.py
app/core/: config.py
app/core/auth/: __init__.py  fastapi_users.py  transport.py  user_manager.py
app/db/: base.py  db_helper.py
app/models/: __init__.py  access_token.py  user.py
app/models/types/: __init__.py
app/schemas/: user.py
app/schemas/enums/: genders.py
app/utils/: __init__.py
