[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
uvicorn = {extras = ["standart"], version = "^0.37.0"}
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["acynsio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}


[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
